plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'Baemin'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springAiVersion', "1.0.0")
}

dependencies {

	/* Web & REST API */
	implementation 'org.springframework.boot:spring-boot-starter-web'

	/* Spring Security */
	implementation 'org.springframework.boot:spring-boot-starter-security'

	/* JPA */
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.mysql:mysql-connector-j' // MySQL JDBC Driver

	/* Redis 연동 */
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	/* Spring Batch */
	implementation 'org.springframework.boot:spring-boot-starter-batch'

	/* Test */
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.batch:spring-batch-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	/* Lombok */
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'


	/* JWT 의존성 */
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	/* OAuth2 Client (카카오 로그인) */
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	/* Validation (요청 검증) */
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	/* JPA Auditing (@CreatedDate 등) */
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	/* ElasticSearch */
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	implementation 'co.elastic.clients:elasticsearch-java:8.13.0'

	/* dev tools */
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Jackson Datatype for Java 8 Date/Time API (뉴스 세팅에서 사용하는 임시 추가 파일 테스트 끝난 후 삭제 할 예정)
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	/* Swagger UI */
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0"

	/* Prometheus */
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	/* Redis-Cache */
	implementation 'org.springframework.boot:spring-boot-starter-cache'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
